# tag-tracker

./: CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-01-tag-tracker.md
docs/superpowers/specs/: 2026-04-01-tag-tracker-design.md
src/: error.rs  keybindings.rs  main.rs
src/cli/: commands.rs  mod.rs
src/db/: connection.rs  mod.rs  session_repo.rs  tracker_repo.rs
src/domain/: mod.rs  session.rs  tracker.rs
src/waybar/: output.rs
