[package]
name = "tag-tracker"
version = "0.1.0"
edition = "2024"
description = "CLI time tracker with waybar integration"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "6"
colored = "2"

[dev-dependencies]
tempfile = "3"
